tests/fail/intrinsics/unchecked_sub1.stderr
error: Undefined Behavior: overflow executing `unchecked_sub`
  --> $DIR/unchecked_sub1.rs:LL:CC
   |
LL |         std::intrinsics::unchecked_sub(14u32, 22);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overflow executing `unchecked_sub`
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/unchecked_sub1.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

